--- a/KGSample/KGSample/KGSample/GEventEdit.xaml
+++ b/KGSample/KGSample/KGSample/GEventEdit.xaml
@@ -88,14 +88,14 @@
 		<StackPanel Grid.Row="2"    Grid.Column="1"   Orientation="Horizontal"
 								HorizontalAlignment="Left" >
 			<DatePicker Name="start_date_dp"
-								HorizontalAlignment="Left" VerticalAlignment="Top"/>
+								HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,0,10,0" />
 			<Mah:TimePicker  Name="start_time_tp" 
 			/>
 			<Label Content="～"  HorizontalAlignment="Left"  Margin="10,0,10,0" 
 							VerticalAlignment="Top"/>
-			<Mah:TimePicker  Name="end_time_tp" />
+			<Mah:TimePicker  Name="end_time_tp"  Margin="0,0,10,0" />
 			<DatePicker Name="end_date_dp"
-								HorizontalAlignment="Left" VerticalAlignment="Top"/>
+								HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,0,10,0" />
 		</StackPanel>
 		<StackPanel Grid.Row="2" Grid.Column="3"   Orientation="Horizontal"
 								 Margin="0,0,5,0" HorizontalAlignment="Right" >
@@ -138,9 +138,7 @@
 		<StackPanel Grid.Row="6" Grid.Column="1"   Orientation="Horizontal" >
 			<Label Grid.Row="6" Grid.Column="1"   
 						Name="email_lb" Content="アカウント"  />
-			<ComboBox Name="color_cb" Width="120">
-				<ListBoxItem/>
-			</ComboBox>
+			<ComboBox Name="color_cb" Width="120" Margin="10,5,5,5" SelectionChanged="Color_cb_SelectionChanged"/>
 		</StackPanel>
 
 		<Label Grid.Row="8" Grid.Column="0"   HorizontalAlignment="Right"
