--- a/KGSample/KGSample/KGSample/GEventEdit.xaml
+++ b/KGSample/KGSample/KGSample/GEventEdit.xaml
@@ -10,7 +10,7 @@
         WindowStartupLocation="CenterScreen" 
         Title="スケジュール編集"  FontSize="12" VerticalAlignment="Center"
 		ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto" 
-		Closing="MetroWindow_Closing" d:DesignWidth="850">
+		Closing="MetroWindow_Closing" d:DesignWidth="750">
 	<Window.Resources>
 		<Style TargetType="StackPanel">
 			<Setter Property="VerticalAlignment" Value="Center"/>
@@ -66,9 +66,9 @@
 			<RowDefinition x:Name="attach_row" Height="Auto"/>
 		</Grid.RowDefinitions>
 
-		<TextBlock Grid.Row="0"  Grid.Column="1" Grid.ColumnSpan="6" 
+		<TextBox Grid.Row="0"  Grid.Column="1" Grid.ColumnSpan="3"  BorderThickness="0" Foreground="LightBlue" 
 								Name="htmlLink_lb" Text="url"  HorizontalAlignment="Left"  Margin="0,0,0,0"
-								VerticalAlignment="Top" TextTrimming="CharacterEllipsis"/>
+								VerticalAlignment="Top" />
 
 		<Button Grid.Row="1" Grid.Column="0" Style="{StaticResource bt-dell}"
 							  Name="del_bt" />
@@ -87,15 +87,15 @@
 		<Label Grid.Row="2" Grid.Column="0"   Content="日時" HorizontalAlignment="Right"  />
 		<StackPanel Grid.Row="2"    Grid.Column="1"   Orientation="Horizontal"
 								HorizontalAlignment="Left" >
-			<DatePicker Name="start_date_dp" SelectedDateFormat="Long"
+			<DatePicker Name="start_date_dp" SelectedDateFormat="Long" Width="130"
 								HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,0,10,0" SelectedDateChanged="Start_date_dp_SelectedDateChanged" />
 			<Mah:TimePicker  Name="start_time_tp" SelectedTimeChanged="Start_time_tp_SelectedTimeChanged" 
 			/>
 			<Label Content="～"  HorizontalAlignment="Left"  Margin="10,0,10,0" 
 							VerticalAlignment="Top"/>
 			<Mah:TimePicker  Name="end_time_tp"  Margin="0,0,10,0" SelectedTimeChanged="End_time_tp_SelectedTimeChanged" />
-			<DatePicker Name="end_date_dp"
-								HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,0,10,0" SelectedDateChanged="End_date_dp_SelectedDateChanged" />
+			<DatePicker Name="end_date_dp"  Width="130"
+								HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,0,0,0" SelectedDateChanged="End_date_dp_SelectedDateChanged" />
 		</StackPanel>
 		<StackPanel Grid.Row="2" Grid.Column="3"   Orientation="Horizontal"
 								 Margin="0,0,5,0" HorizontalAlignment="Right" >
@@ -178,7 +178,7 @@
 			</ToolBar>
 			<StackPanel  Name="attachments_sp" Orientation="Horizontal" Margin="5,5,5,10" />
 
-			<TextBox  Grid.Row="9"  Grid.Column="1"   MinLines="5" Width="450"
+			<TextBox  Grid.Row="9"  Grid.Column="1"   MinLines="5" 
 						Name="description_tb" Text="詳細" 
 						TextWrapping="Wrap" AcceptsReturn="True" VerticalScrollBarVisibility="Visible" 
 						Typography.NumeralStyle="OldStyle" Typography.SlashedZero="True"
