資料用インターフェイス追加

--- a/KGSample/KGSample/KGSample/GEventEdit.xaml
+++ b/KGSample/KGSample/KGSample/GEventEdit.xaml
@@ -1,30 +1,46 @@
-﻿<Mah:MetroWindow x:Class="KGSample.GEventEdit"
+﻿<Mah:MetroWindow xmlns:ig="http://schemas.infragistics.com/xaml"  x:Class="KGSample.GEventEdit"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:KGSample"
         xmlns:Mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-        GlowBrush="{DynamicResource AccentColorBrush}"
+				 xmlns:wfm="clr-namespace:System.Windows.Forms;assembly=System.Windows.Forms"
+				 GlowBrush="{DynamicResource AccentColorBrush}"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen" 
         Title="スケジュール編集"  FontSize="12" VerticalAlignment="Center"
 		ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto" 
-		Closing="MetroWindow_Closing" d:DesignWidth="750">
+		Closing="MetroWindow_Closing" d:DesignWidth="850" Height="565">
+
 	<Window.Resources>
 		<Style TargetType="StackPanel">
 			<Setter Property="VerticalAlignment" Value="Center"/>
 			<Setter Property="Margin" Value="0,10,0,10"/>
 		</Style>
+
 		<Style TargetType="Label">
 			<Setter Property="VerticalContentAlignment" Value="Center"/>
 			<Setter Property="Margin" Value="5"/>
 		</Style>
 
+		<ControlTemplate x:Key="buttonTemplate"  TargetType="Button">
+			<Border Name="border"
+                BorderThickness="1"
+                BorderBrush="LightGray"
+                Background="{TemplateBinding Background}"
+                CornerRadius="2">
+				<ContentPresenter VerticalAlignment="Center"
+                              HorizontalAlignment="Center" />
+			</Border>
+		</ControlTemplate>
+
 		<Style TargetType="Button">
-			<Setter Property="VerticalAlignment" Value="Center"/>
 			<Setter Property="Margin" Value="0,5,0,5"/>
+			<Setter Property="Template"  Value="{StaticResource buttonTemplate}"/>
 		</Style>
+
+
 		<Style x:Key="bt-attachment" TargetType="Button">
 			<Setter Property="HorizontalContentAlignment" Value="Left" />
 			<Setter Property="Margin" Value="3,3,3,3" />
@@ -66,11 +82,11 @@
 			<RowDefinition x:Name="attach_row" Height="Auto"/>
 		</Grid.RowDefinitions>
 
-		<TextBox Grid.Row="0"  Grid.Column="1" Grid.ColumnSpan="3"  BorderThickness="0" Foreground="LightBlue" 
+		<TextBox Grid.Row="0"  Grid.Column="1" Grid.ColumnSpan="3"  BorderThickness="0" Foreground="White" 
 								Name="htmlLink_lb" Text="url"  HorizontalAlignment="Left"  Margin="0,0,0,0"
 								VerticalAlignment="Top" />
 
-		<Button Grid.Row="1" Grid.Column="0" Style="{StaticResource bt-dell}"
+		<Button Grid.Row="1" Grid.Column="0" Style="{StaticResource bt-dell}" FontSize="24"
 							  Name="del_bt" />
 		<TextBox Grid.Row="1"  Grid.Column="1" 
 								Name="titol_tv" Text="タイトル" FontSize="24"  HorizontalAlignment="Left"  Margin="0,0,0,0" 
@@ -79,9 +95,15 @@
 		<StackPanel Grid.Row="1" Grid.Column="2"   Orientation="Horizontal"
 								HorizontalAlignment="Right" VerticalAlignment="Bottom"  
 								 Margin="5,0,5,0" >
-			<Button  Name="save_bt" Content="保存"  />
-			<ComboBox HorizontalAlignment="Center"
-			/>
+			<Button  Name="save_bt" Content="保存" Width="40" Margin="0,0,10,0"  />
+			<ComboBox HorizontalAlignment="Center" Text="その他の操作" Width="148">
+				<ListBoxItem Content="印刷"/>
+				<ListBoxItem Content="削除"/>
+				<ListBoxItem Content="複製"/>
+				<ListBoxItem Content="予定を公開"/>
+				<ListBoxItem Content="今回の予定を公開"/>
+				<ListBoxItem Content="主催者を変更"/>
+			</ComboBox>
 		</StackPanel>
 
 		<Label Grid.Row="2" Grid.Column="0"   Content="日時" HorizontalAlignment="Right"  />
@@ -103,33 +125,72 @@
 						HorizontalAlignment="Left"  Margin="0,0,0,0" 
 						VerticalAlignment="Center" />
 			<Button  Name="time_zone_attach_bt" Content="タイムゾーン"  
-							HorizontalAlignment="Center" Margin="5,0,5,0"   />
+							HorizontalAlignment="Center" Margin="10,0,0,0"   />
 		</StackPanel>
 
 		<Label Grid.Row="3"  Grid.Column="0"  
 						Name="rep" Content="繰り返し" HorizontalAlignment="Right" />
 		<StackPanel Grid.Row="3" Grid.Column="1"   Orientation="Horizontal" >
 			<CheckBox Name="daylong_cb" Content="終日" HorizontalAlignment="Left" VerticalAlignment="Center" Checked="Daylong_cb_Checked"/>
-			<ComboBox Name="kurikaesi_cb" Margin="10,0,0,0" >
-				<Button Content="繰り返さない"/>
-				<Button Content="毎日"/>
-				<Button Content="毎週"/>
-				<Button Content="毎月"/>
-				<Button Content="毎年"/>
-				<Button Content="毎週平日（月～金）"/>
-				<Button Content="カスタム"/>
+			<ComboBox Name="kurikaesi_cb" SelectedIndex="1" Margin="10,0,0,0" >
+				<ListBoxItem Content="繰り返さない"/>
+				<ListBoxItem Content="毎日"/>
+				<ListBoxItem Content="毎週"/>
+				<ListBoxItem Content="毎月"/>
+				<ListBoxItem Content="毎年"/>
+				<ListBoxItem Content="分"/>
+				<ListBoxItem Content="毎週平日（月～金）"/>
+				<ListBoxItem Content="カスタム"/>
 			</ComboBox>
 		</StackPanel>
-
+		<StackPanel Grid.Row="3" Grid.Column="2"  Orientation="Horizontal"  Margin="10,0,0,0">
+			<ComboBox  Text="出欠確認:参加" Margin="0,0,10,0" Width="85" >
+				<ListBoxItem Content="はい"/>
+				<ListBoxItem Content="いいえ"/>
+				<ListBoxItem Content="未定"/>
+			</ComboBox>
+			<Button Content="メモ/ゲストを追加" />
+		</StackPanel>
 		<Label Grid.Row="4" Grid.Column="0"   
 						Content="場所" HorizontalAlignment="Right"  />
 		<TextBox Grid.Row="4"  Grid.Column="1"   Margin="0,5,0,5" 
 						Name="location_tb" Text="場所" />
+		<StackPanel Grid.Row="4" Grid.Column="2"  Grid.RowSpan="6" VerticalAlignment="Top"  Margin="10,5,0,5" >
+			<Button  Content="ゲストを追加" 
+								HorizontalAlignment="Left" VerticalAlignment="Center" Width="225" />
+			<StackPanel>
+				<Label Content="abc@defg.com"/>
+				<Label Content="hij@klnmop.com"/>
+			</StackPanel>
+			<Label Content="ゲストの権限"/>
+			<CheckBox Content="予定を変更する" />
+			<CheckBox Content="他のユーザーを招待する" Margin="0,10,0,10" />
+			<CheckBox Content="ゲストリストを表示する" />
+		</StackPanel>
 
 		<Label Grid.Row="5" Grid.Column="0"   
 						Content="通知" HorizontalAlignment="Right"  />
 		<StackPanel Grid.Row="5" Grid.Column="1"   
-							Name="overrides_sp" />
+							Name="overrides_sp">
+			<StackPanel  Orientation="Horizontal">
+				<ComboBox SelectedIndex="1" HorizontalAlignment="Left" VerticalAlignment="Top" Width="120">
+					<ListBoxItem Content="メール"/>
+					<ListBoxItem Content="通知"/>
+				</ComboBox>
+				<WindowsFormsHost Grid.Row="0" Width="60" Margin="5,0,5,0"  >
+					<!-- 要アセンブリ参照追加：System.Windows.Forms -->
+					<wfm:NumericUpDown x:Name="Spin1" x:FieldModifier="public"  
+                               Value="10" Maximum="50" Minimum="1" ReadOnly="True" />
+				</WindowsFormsHost>
+				<ComboBox SelectedIndex="0" HorizontalAlignment="Left" VerticalAlignment="Top" Width="120">
+					<ListBoxItem Content="分"/>
+					<ListBoxItem Content="時間"/>
+					<ListBoxItem Content="日"/>
+					<ListBoxItem Content="週"/>
+				</ComboBox>
+			</StackPanel>
+			<Button Content="通知を追加" Margin="0,5,345,5" />
+		</StackPanel>
 		<StackPanel Grid.Row="5" Grid.Column="2"   
 							Name="attendees_sp" />
 
@@ -145,13 +206,13 @@
 						Content="予定" />
 		<StackPanel Grid.Row="8" Grid.Column="1"   Orientation="Horizontal" Margin="0,5,0,5" >
 			<ComboBox Name="yotei_cb" SelectedIndex="1" >
-				<Button Content="予定あり"/>
-				<Button Content="予定なし"/>
+				<ListBoxItem Content="予定あり"/>
+				<ListBoxItem Content="予定なし"/>
 			</ComboBox>
-			<ComboBox Name="koukai_cb" SelectedIndex="1" >
-				<Button Content="デフォルトの公開設定"/>
-				<Button Content="公開"/>
-				<Button Content="非公開"/>
+			<ComboBox Name="koukai_cb" SelectedIndex="1"  Margin="5,0,5,0" >
+				<ListBoxItem Content="デフォルトの公開設定"/>
+				<ListBoxItem Content="公開"/>
+				<ListBoxItem Content="非公開"/>
 			</ComboBox>
 		</StackPanel>
 
