--- a/KGSample/KGSample/GEventEdit.xaml
+++ b/KGSample/KGSample/GEventEdit.xaml
@@ -121,13 +121,12 @@
 			<DatePicker Name="start_date_dp" SelectedDateFormat="Long" Width="130"
 								HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,0,0,0" 
 								SelectedDateChanged="Start_date_dp_SelectedDateChanged" />
-			<!--<Mah:TimePicker  Name="start_time_tp" SelectedTimeChanged="Start_time_tp_SelectedTimeChanged" />-->
 			<local:TimePic x:Name="start_time_tp"  VerticalAlignment="Top"  
-									TimeSelectionChanged="St_tp_TimeSelectionChanged"   />
+									TimeSelectionChanged="Start_time_tp_SelectedTimeChanged"   />
 
 			<Label Content="～"  HorizontalAlignment="Left"  Margin="10,0,10,0" 	VerticalAlignment="Top"/>
-			<!--<local:TimePic x:Name="et_tp" />-->
-			<Mah:TimePicker  Name="end_time_tp"  Margin="0,0,10,0" SelectedTimeChanged="End_time_tp_SelectedTimeChanged" />
+			<local:TimePic x:Name="end_time_tp"  VerticalAlignment="Top"  
+									TimeSelectionChanged="End_time_tp_SelectedTimeChanged"   />
 			<DatePicker Name="end_date_dp"  Width="130"
 								HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,0,0,0" SelectedDateChanged="End_date_dp_SelectedDateChanged" />
 		</StackPanel>
