--- a/KGSample/KGSample/GEventEdit.xaml
+++ b/KGSample/KGSample/GEventEdit.xaml
@@ -1,19 +1,21 @@
-﻿<Mah:MetroWindow xmlns:ig="http://schemas.infragistics.com/xaml"  x:Class="KGSample.GEventEdit"
+﻿<!--<Mah:MetroWindow xmlns:ig="http://schemas.infragistics.com/xaml" 
+        xmlns:Mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+				 xmlns:wfm="clr-namespace:System.Windows.Forms;assembly=System.Windows.Forms"
+				 GlowBrush="{DynamicResource AccentColorBrush}"
+		">-->
+<Window x:Class="KGSample.GEventEdit"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:KGSample"
-        xmlns:Mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-				 xmlns:wfm="clr-namespace:System.Windows.Forms;assembly=System.Windows.Forms"
-				 GlowBrush="{DynamicResource AccentColorBrush}"
         mc:Ignorable="d"
-        WindowStartupLocation="CenterScreen" 
         Title="スケジュール編集"  FontSize="12" VerticalAlignment="Center"
 		ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto" 
-		Closing="MetroWindow_Closing" d:DesignWidth="1078" Height="847.25">
-
-	<Window.Resources>
+	    WindowStartupLocation="CenterScreen"   d:DesignWidth="1078" Height="850"
+		Closing="MetroWindow_Closing" >
+		
+		<Window.Resources>
 		<Style TargetType="StackPanel">
 			<Setter Property="VerticalAlignment" Value="Center"/>
 			<Setter Property="Margin" Value="0,10,0,10"/>
@@ -124,11 +126,12 @@
 			<local:TimePic x:Name="start_time_tp"  VerticalAlignment="Top"  
 									TimeSelectionChanged="Start_time_tp_SelectedTimeChanged"   />
 
-			<Label Content="～"  HorizontalAlignment="Left"  Margin="10,0,10,0" 	VerticalAlignment="Top"/>
+			<Label Content="～"  HorizontalAlignment="Left"  Margin="10,0,10,0"  VerticalAlignment="Top"/>
 			<local:TimePic x:Name="end_time_tp"  VerticalAlignment="Top"  
 									TimeSelectionChanged="End_time_tp_SelectedTimeChanged"   />
 			<DatePicker Name="end_date_dp"  Width="130"
-								HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,0,0,0" SelectedDateChanged="End_date_dp_SelectedDateChanged" />
+								HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,0,0,0" 
+								SelectedDateChanged="End_date_dp_SelectedDateChanged" />
 		</StackPanel>
 		<StackPanel Grid.Row="2" Grid.Column="3"   Orientation="Horizontal"
 								 Margin="0,0,5,0" HorizontalAlignment="Right" >
@@ -275,7 +278,5 @@
 
 		</StackPanel>
 	</Grid>
-</Mah:MetroWindow>
-
-
-<!--MahApps.Metroを使ってみた		http://sourcechord.hatenablog.com/entry/2016/02/23/012511-->
+</Window>
+<!--</Mah:MetroWindow>-->
