--- a/KGSample/KGSample/GEventEdit.xaml
+++ b/KGSample/KGSample/GEventEdit.xaml
@@ -13,7 +13,7 @@
         Title="スケジュール編集"  FontSize="12" VerticalAlignment="Center"
 		ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto" 
 	    WindowStartupLocation="CenterScreen"   d:DesignWidth="1078" Height="850"
-		Closing="MetroWindow_Closing" >
+		Closing="Window_Closing" >
 		
 		<Window.Resources>
 		<Style TargetType="StackPanel">
