--- a/KGSample/KGSample/GoogleDriveBrouser.xaml
+++ b/KGSample/KGSample/GoogleDriveBrouser.xaml
@@ -1,14 +1,21 @@
-﻿<Mah:MetroWindow x:Class="KGSample.GoogleDriveBrouser"
+﻿<!--<Mah:MetroWindow x:Class="KGSample.GoogleDriveBrouser"
+        xmlns:Mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+        GlowBrush="{DynamicResource AccentColorBrush}"
+        mc:Ignorable="d"
+		>-->
+<Window x:Class="KGSample.GoogleDriveBrouser"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:KGSample"
-        xmlns:Mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-        GlowBrush="{DynamicResource AccentColorBrush}"
         mc:Ignorable="d"
+        Title="GoogleDriveブラウザ" Height="380" Width="700"
         WindowStartupLocation="CenterScreen" 
-        Title="GoogleDrive" Height="380" Width="700" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto" Closing="MetroWindow_Closing">
+		ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto" 
+		Closing="Window_Closing" >
+
+
 	<Window.Resources>
 		<Style TargetType="StackPanel">
 			<Setter Property="VerticalAlignment" Value="Center"/>
@@ -89,5 +96,6 @@
 
 		</StackPanel>
 	</Grid>
-</Mah:MetroWindow>
+</Window>
+<!--</Mah:MetroWindow>-->
 
