--- a/KGSample/KGSample/GCalender.xaml
+++ b/KGSample/KGSample/GCalender.xaml
@@ -1,14 +1,21 @@
-﻿<Mah:MetroWindow x:Class="KGSample.GCalender"
+﻿<!--<
+        xmlns:Mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+        GlowBrush="{DynamicResource AccentColorBrush}"
+        mc:Ignorable="d"
+">-->
+<Window x:Class="KGSample.GCalender"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:KGSample"
-        xmlns:Mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-        GlowBrush="{DynamicResource AccentColorBrush}"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen" 
-        Title="スケジュール管理" Height="800" Width="1050" SizeChanged="MetroWindow_SizeChanged" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto">
+        Title="スケジュール管理" Height="800" Width="1050" 
+		SizeChanged="MetroWindow_SizeChanged" ScrollViewer.HorizontalScrollBarVisibility="Auto" 
+		ScrollViewer.VerticalScrollBarVisibility="Auto">
+
+
 	<Window.Resources>
 		<ResourceDictionary Source="/Style/StyleDic.xaml"/>
 	</Window.Resources>
@@ -25,7 +32,8 @@
 		<Button Content="週" HorizontalAlignment="Left" Margin="922,19,0,0" VerticalAlignment="Top" Width="33" RenderTransformOrigin="0.485,-0.162" AutomationProperties.HelpText="作成中"/>
 		<Label Content="の表示" Margin="870,20,101.2,0" VerticalAlignment="Top"/>
 	</Grid>
-</Mah:MetroWindow>
+</Window>
+<!--</Mah:MetroWindow>-->
 
 
 <!--MahApps.Metroを使ってみた		http://sourcechord.hatenablog.com/entry/2016/02/23/012511-->
