--- a/KGSample/KGSample/GEventEdit.xaml
+++ b/KGSample/KGSample/GEventEdit.xaml
@@ -1,9 +1,4 @@
-﻿<!--<Mah:MetroWindow xmlns:ig="http://schemas.infragistics.com/xaml" 
-        xmlns:Mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-				 xmlns:wfm="clr-namespace:System.Windows.Forms;assembly=System.Windows.Forms"
-				 GlowBrush="{DynamicResource AccentColorBrush}"
-		">-->
-<Window x:Class="KGSample.GEventEdit"
+﻿<Window x:Class="KGSample.GEventEdit"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -15,8 +10,8 @@
 	    WindowStartupLocation="CenterScreen" 
 		d:DesignWidth="1078" Height="850"
 		Closing="Window_Closing" >
-		
-		<Window.Resources>
+
+	<Window.Resources>
 		<Style TargetType="StackPanel">
 			<Setter Property="VerticalAlignment" Value="Center"/>
 			<Setter Property="Margin" Value="0,10,0,10"/>
@@ -134,7 +129,7 @@
 								HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,0,0,0" 
 								SelectedDateChanged="End_date_dp_SelectedDateChanged" />
 		</StackPanel>
-		<StackPanel Grid.Row="2" Grid.Column="3"   Orientation="Horizontal"
+		<StackPanel Grid.Row="2" Grid.Column="3"   Orientation="Horizontal" Width="400"
 								 Margin="0,0,5,0" HorizontalAlignment="Right" >
 			<Label Name="time_zone_lb" Content="GMT+09:00) 日本標準時" 
 						HorizontalAlignment="Left"  Margin="0,0,0,0" 
@@ -244,19 +239,20 @@
 		<Label  Grid.Row="12" Grid.Column="0"   Content="得意先" HorizontalAlignment="Right" />
 		<TextBox  Grid.Row="12" Grid.Column="1"    Name="customer_tb"  Text="ABCdef"   VerticalAlignment="Center" />
 		<Label Grid.Row="13" Grid.Column="0"   HorizontalAlignment="Right" VerticalAlignment="Top" Content="メモ" />
-		<TextBox  	Grid.Row="13"  Grid.Column="1"   Margin="0,0,0,0" Width="516"
+		<TextBox  	Grid.Row="12"  Grid.Column="1"   Margin="0,37,0,0" 
 						Name="momo_tb" Text="詳細"   MinLines="10" 
 						TextWrapping="Wrap" AcceptsReturn="True" VerticalScrollBarVisibility="Visible" 
 						Typography.NumeralStyle="OldStyle" Typography.SlashedZero="True" HorizontalAlignment="Left" VerticalAlignment="Top"
-						 LostFocus="Momo_tb_LostFocus"/>
-		<WebBrowser  Grid.Row="11"  Grid.Column="2"    Grid.RowSpan="4" Language="jp" 
+						 LostFocus="Momo_tb_LostFocus" Grid.RowSpan="2" Width="547"/>
+		<WebBrowser  Grid.Row="11"  Grid.Column="2"    Grid.RowSpan="4" Width="400"
+						Language="jp" 
 						Name="description_wb"/>
 
 		<Button Grid.Row="14" Grid.Column="0" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,5,0"
 						Name="attach_bt" Content="添付" 
 								Click="Attach_bt_Click" />
 
-		<StackPanel Grid.Row="14" Grid.Column="1"   >
+		<StackPanel Grid.Row="14" Grid.Column="1" >
 			<!--<ToolBar HorizontalAlignment="Left" VerticalAlignment="Top">
 				<Button  Name="attach_bt" Content="添付" 
 								HorizontalAlignment="Left" VerticalAlignment="Center" Click="Attach_bt_Click" />
@@ -280,4 +276,3 @@
 		</StackPanel>
 	</Grid>
 </Window>
-<!--</Mah:MetroWindow>-->
