--- a/KGSample/KGSample/WebWindow.xaml
+++ b/KGSample/KGSample/WebWindow.xaml
@@ -1,15 +1,18 @@
-﻿<Mah:MetroWindow x:Class="KGSample.WebWindow"
+﻿	<Window x:Class="KGSample.WebWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:KGSample"
-        xmlns:Mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-        GlowBrush="{DynamicResource AccentColorBrush}"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen" 
-        Title="web" Height="800" Width="1050" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto">
-	<Window.Resources>
+        Title="web" Height="800" Width="1050" 
+		ScrollViewer.HorizontalScrollBarVisibility="Auto" 
+		ScrollViewer.VerticalScrollBarVisibility="Auto">
+
+
+
+		<Window.Resources>
 		<ResourceDictionary Source="/Style/StyleDic.xaml"/>
 	</Window.Resources>
 
@@ -23,4 +26,4 @@
 		<WebBrowser x:Name="web_wb" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
 		ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto"/>
 	</Grid>
-</Mah:MetroWindow>
+	</Window>
