--- a/KGSample/KGSample/GCalender.xaml
+++ b/KGSample/KGSample/GCalender.xaml
@@ -1,9 +1,4 @@
-﻿<!--<
-        xmlns:Mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-        GlowBrush="{DynamicResource AccentColorBrush}"
-        mc:Ignorable="d"
-">-->
-<Window x:Class="KGSample.GCalender"
+﻿<Window x:Class="KGSample.GCalender"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -33,7 +28,3 @@
 		<Label Content="の表示" Margin="870,20,101.2,0" VerticalAlignment="Top"/>
 	</Grid>
 </Window>
-<!--</Mah:MetroWindow>-->
-
-
-<!--MahApps.Metroを使ってみた		http://sourcechord.hatenablog.com/entry/2016/02/23/012511-->
