--- a/KGSample/KGSample/GoogleDriveBrouser.xaml
+++ b/KGSample/KGSample/GoogleDriveBrouser.xaml
@@ -1,9 +1,4 @@
-﻿<!--<Mah:MetroWindow x:Class="KGSample.GoogleDriveBrouser"
-        xmlns:Mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-        GlowBrush="{DynamicResource AccentColorBrush}"
-        mc:Ignorable="d"
-		>-->
-<Window x:Class="KGSample.GoogleDriveBrouser"
+﻿<Window x:Class="KGSample.GoogleDriveBrouser"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
