--- a/KGSample/KGSample/WebWindow.xaml
+++ b/KGSample/KGSample/WebWindow.xaml
@@ -1,29 +1,26 @@
-﻿	<Window x:Class="KGSample.WebWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:KGSample"
+        xmlns:Controls="clr-namespace:Microsoft.Toolkit.Wpf.UI.Controls;assembly=Microsoft.Toolkit.Wpf.UI.Controls.WebView" 
+		x:Class="KGSample.WebWindow"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen" 
         Title="web" Height="800" Width="1050" 
 		ScrollViewer.HorizontalScrollBarVisibility="Auto" 
-		ScrollViewer.VerticalScrollBarVisibility="Auto">
-
-
-
-	<Window.Resources>
-		<!--<ResourceDictionary Source="/Style/StyleDic.xaml"/>-->
-	</Window.Resources>
-
+		ScrollViewer.VerticalScrollBarVisibility="Auto" Closing="Window_Closing">
 
 	<Grid>
 		<Grid.RowDefinitions>
 			<RowDefinition Height="Auto"/>
 			<RowDefinition />
 		</Grid.RowDefinitions>
-		<TextBox x:Name="url_tb" Grid.Row="0" HorizontalAlignment="Stretch" Height="18" Margin="10,10,10,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" TextChanged="Url_tb_TextChanged"/>
-		<WebBrowser x:Name="web_wb" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
-		ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto"/>
+		<TextBox x:Name="url_tb" Grid.Row="0" HorizontalAlignment="Stretch" Height="18" Margin="10,10,10,0" TextWrapping="Wrap" 
+						Text="TextBox" VerticalAlignment="Top" TextChanged="Url_tb_TextChanged"/>
+		<Controls:WebView Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
+		Source="https://search.yahoo.co.jp/search"
+										x:Name="web_wb" />
 	</Grid>
-	</Window>
+</Window>
