--- a/KGSample/KGSample/WebWindow.xaml
+++ b/KGSample/KGSample/WebWindow.xaml
@@ -17,7 +17,7 @@
 			<RowDefinition Height="Auto"/>
 			<RowDefinition />
 		</Grid.RowDefinitions>
-		<TextBox x:Name="url_tb" Grid.Row="0" HorizontalAlignment="Stretch" Height="18" Margin="10,10,10,0" TextWrapping="Wrap" 
+		<TextBox x:Name="url_tb" Grid.Row="0" HorizontalAlignment="Stretch"  Margin="10,10,10,0" TextWrapping="Wrap" 
 						Text="" VerticalAlignment="Top" TextChanged="Url_tb_TextChanged"/>
 		<Controls:WebView Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
 										x:Name="web_wb" />
